修复了文章bug

--- a/content/posts/Daily Dev/记一次博客搭建.md
+++ b/content/posts/Daily Dev/记一次博客搭建.md
@@ -1,8 +1,7 @@
 ---
-title: "My 1st post"
-date: 2024-06-25
-aliases: ["/Daily Dev"]
-tags: ["Daily Dev", "Website"]
+title: "记一次博客搭建"
+date: 2024-06-24
+tags: ["Website"]
 categories: ["Daily Dev"]
 author: "Kurong"
 showToc: true
@@ -10,7 +9,6 @@ TocOpen: true
 draft: false
 hidemeta: false
 comments: false
-description: "记录一次hugo博客搭建"
 disableHLJS: false # to disable highlightjs
 disableShare: true
 disableHLJS: false
@@ -23,6 +21,8 @@ ShowWordCount: true
 ShowRssButtonInSectionTermList: true
 UseHugoToc: true
 ---
+
+# My Blog Construction
 
 ## 前言
 
