添加了知识图谱系列

--- a/content/posts/KnowledgeGraph/领域综述.md
+++ b/content/posts/KnowledgeGraph/领域综述.md
@@ -1,6 +1,6 @@
 ---
 title: "KnowledgeGraph Abstract"
-date: 2020-09-15
+date: 2024-06-25
 aliases: ["/KnowledgeGraph"]
 tags: ["KnowledgeGraph", "Abstract"]
 categories: ["KnowledgeGraph"]
@@ -29,3 +29,107 @@ cover:
     relative: false # when using page bundles set this to true
     hidden: true # only hide on current single page
 ---
+
+
+
+
+
+
+
+本文是对封面论文《A Survey on Knowledge Graphs: Representation, Acquisition and Applications》的提炼，目的是获取对该领域的一个大致认识。
+
+## Abstract
+
+人类知识为我们对世界的形式化理解提供了基础。知识图谱作为表示实体之间结构关系的工具，已成为越来越受欢迎的研究方向，旨在实现认知和人类级别的智能。在这份综述中，我们全面回顾了知识图谱的研究主题，包括：1）知识图谱表示学习，2）知识获取与补全，3）时间知识图谱，以及4）知识感知应用，并总结了近期的突破和未来研究的展望方向。我们提出了一个全面的分类和新的分类法。知识图谱嵌入从四个方面进行组织：表示空间、评分函数、编码模型和辅助信息。对于知识获取，特别是知识图谱的补全，我们回顾了嵌入方法、路径推断和逻辑规则推理。此外，我们还探讨了几个新兴的主题，包括元关系学习、常识推理和时间知识图谱。为了促进知识图谱的未来研究，我们还提供了一份精选的不同任务的数据集和开源库。最后，我们对几个有前景的研究方向进行了详细的展望。
+
+> 通过该论文的摘要可以非常清晰的看出本文主要内容是关于知识图谱领域的综述。
+
+
+
+## 1. Introduction
+
+知识图谱是一种结构化的事实表示，包括实体、关系和语义描述。实体可以是现实世界的对象和抽象概念，关系表示实体之间的关联，实体及其关系的语义描述包含具有明确定义含义的类型和属性。属性图或带属性的图广泛应用，其中节点和关系具有属性或特性。
+
+知识图谱与知识库这两个术语在某种程度上是同义的，但存在一些细微差异。当考虑到图形结构时，知识图谱可以被视为一个图。而当涉及到形式化语义时，它可以被视为用于解释和推理事实的知识库。图1中展示了知识库和知识图谱的示例。知识可以用事实三元组的形式来表达，例如（头部，关系，尾部）或（主题，谓词，对象），在资源描述框架（RDF）下，例如（阿尔伯特·爱因斯坦，获奖者，诺贝尔奖）。它还可以表示为一个有向图，其中节点表示实体，边表示关系。为了简化，本文将知识图谱和知识库这两个术语视为可以互换使用。
+
+> 资源描述框架（RDF）是用于描述网络资源的 W3C 标准，比如网页的标题、作者、修改日期、内容以及版权信息。RDF 被设计为提供一种描述信息的通用方法，这样就可以被计算机应用程序读取并理解。具体内容参考[RDF 教程 (w3school.com.cn)](https://www.w3school.com.cn/rdf/index.asp)
+
+![](/img/KnowledgeGraph/QQ截图20240625170752.png)
+
+知识图谱的最新研究进展（2021年）聚焦于知识表示学习（KRL）或知识图嵌入（KGE），通过将实体和关系映射到低维向量中，同时捕捉它们的语义含义 。具体的知识获取任务包括知识图谱补全（KGC）、三元组分类、实体识别和关系抽取。知识感知模型受益于异构信息、丰富的本体和语义以及多语言知识的整合。因此，许多现实世界的应用，如推荐系统和问答系统，都因其具备常识理解和推理能力而繁荣发展。
+
+本文的剩余部分中，在第二部分提供了知识图谱的概述，包括历史、符号、定义和分类；然后，在第三部分中，从四个角度讨论了KRL；接下来，在第四部分和第五部分详细探讨了知识获取和时间知识图谱的任务；在第六部分介绍了下游应用；最后讨论了未来的研究方向，并在结尾处总结。
+
+
+
+## 2. Overview
+
+### A. A Brief History of Knowledge Bases
+
+图形化知识表示的概念最早可以追溯到1956年，当时Richens提出了“语义网”的概念。而符号逻辑知识则可以追溯到1959年的“通用问题求解器”。知识库首次用于基于知识的推理和问题求解系统。MYCIN是最著名的基于规则的专家系统之一，用于医学诊断，其知识库包含约600条规则。随后，人类知识表示领域出现了基于框架、基于规则和混合表示的发展。大约在这一时期末，Cyc项目开始，旨在整合人类知识。Resource Description Framework（RDF）和Web Ontology Language（OWL）相继发布，并成为语义Web的重要标准。此后，许多开放的知识库或本体被发布，例如WordNet、DBpedia、YAGO和Freebase。1988年，Stokman和Vries提出了一种现代的基于图形的结构化知识的理念。然而，直到2012年，知识图谱的概念才因Google搜索引擎的首次推出而广受欢迎，其中提出了名为“知识金库”的大规模知识图谱融合框架。
+
+###  B. Definitions and Notations
+
+知识图谱定义为 $G = \{E, R, F\}$ ，其中 $E$、$R$ 和 $F$ 分别是实体、关系和事实的集合。事实被三元组 $(h,r,t) \in F$ 表示，其中 $h$ 、 $r$  和 $t$ 分别是 head、relation、tail。
+
+### C. Categorization of Research on Knowledge Graph
+
+![QQ截图20240625174957](/img/KnowledgeGraph/QQ截图20240625174957.png)
+
+**知识表示学习（Knowledge Representation Learning，简称KRL）** 是知识图谱领域的关键研究问题，为许多知识获取任务和下游应用铺平了道路。可以将KRL分为四个方面：表示空间、评分函数、编码模型和辅助信息，为开发KRL模型提供了清晰的工作流程。具体要素包括：
+
+1. **表示空间**：用于表示关系和实体的空间。
+2. **评分函数**：用于衡量事实三元组的合理性。
+3. **编码模型**：用于表示和学习关系交互。
+4. **辅助信息**：用于嵌入方法中的信息。
+
+表示学习包括点空间、流形、复向量空间、高斯分布和离散空间。评分指标通常分为基于距离和基于相似性匹配的评分函数。当前的研究重点在于编码模型，包括线性/双线性模型、分解和神经网络。辅助信息考虑了文本、视觉和类型信息。
+
+**知识获取任务（Knowledge Acquisition tasks）** 可分为三个类别：**知识图谱补全（KGC）**、**关系抽取**和**实体发现**。其中：
+
+1. **知识图谱补全（KGC）**：旨在通过预测缺失链接来扩展现有的知识图谱。这一任务包括基于嵌入的排名、关系路径推理、基于规则的推理和元关系学习。
+2. **关系抽取**：从文本中提取新的关系事实。关系抽取模型利用了注意力机制、图卷积网络（GCNs）、对抗训练、强化学习、深度残差学习和迁移学习等方法。
+3. **实体发现**：包括实体识别、消歧、类型标注和对齐。
+
+**时间知识图谱（Temporal Knowledge Graphs）** 将时间信息融入表示学习中。这份调查将其分为四个研究领域：
+
+1. **时间嵌入（Temporal Embedding）**：将实体和事件类型嵌入到低维向量空间中，以便进行后续任务，如事件预测和问答。
+2. **实体动态（Entity Dynamics）**：关注实体随时间的变化和演化。
+3. **时间关系依赖（Temporal Relational Dependency）**：研究关系在时间上的变化和依赖。
+4. **时间逻辑推理（Temporal Logical Reasoning）**：探讨在时间维度上进行逻辑推理的方法。
+
+**知识感知应用**包括自然语言理解（NLU）、问答、推荐系统和其他现实世界任务，这些应用注入知识以改善表示学习效果。
+
+
+
+## 3. Knowledge Representation Learning
+
+水平不足以阅读该部分，之后再回来拜读。
+
+
+
+## 4.  Knowledge Acqusition
+
+水平不足以阅读该部分，之后再回来拜读。
+
+
+
+## 5. Temporal Knowledge Graph
+
+水平不足以阅读该部分，之后再回来拜读。
+
+
+
+## 6. Knowledge-Aware Applications
+
+水平不足以阅读该部分，之后再回来拜读。
+
+
+
+## 7. Future Directions
+
+水平不足以阅读该部分，之后再回来拜读。
+
+​                                    
+
+​              
