--- a/content/posts/KnowledgeGraph/领域综述.md
+++ b/content/posts/KnowledgeGraph/领域综述.md
@@ -22,8 +22,8 @@ ShowRssButtonInSectionTermList: true
 UseHugoToc: true
 cover:
     image: "cover/领域综述.png" # image path/url
-    alt: "1" # alt text
-    caption: "1" # display caption under cover
+    alt: "" # alt text
+    caption: "" # display caption under cover
     relative: false # when using page bundles set this to true
     hidden: true # only hide on current single page
 ---
