--- a/content/posts/PaperNotes/中文命名实体识别研究综述_赵继贵.md
+++ b/content/posts/PaperNotes/中文命名实体识别研究综述_赵继贵.md
@@ -21,7 +21,7 @@ ShowPostNavLinks: true
 ShowRssButtonInSectionTermList: true
 UseHugoToc: true
 cover:
-    image: "cover/中文命名实体识别研究综述.png # image path/url
+    image: "cover/中文命名实体识别研究综述.png" # image path/url
     alt: "" # alt text
     caption: "" # display caption under cover
     relative: false # when using page bundles set this to true
