--- a/content/posts/PaperNotes/中文命名实体识别研究综述_赵继贵.md
+++ b/content/posts/PaperNotes/中文命名实体识别研究综述_赵继贵.md
@@ -10,7 +10,7 @@ TocOpen: true
 draft: false
 hidemeta: false
 comments: false
-description: "《中文命名实体识别研究综述》读后简易笔记"
+description: ""
 disableHLJS: false # to disable highlightjs
 disableShare: true
 disableHLJS: false
