--- a/content/posts/WeeklyWorking/2024_08_06-2024_08_11.md
+++ b/content/posts/WeeklyWorking/2024_08_06-2024_08_11.md
@@ -10,7 +10,7 @@ TocOpen: true
 draft: false
 hidemeta: false
 comments: false
-description: "Desc Text."
+description: ""
 disableHLJS: false # to disable highlightjs
 disableShare: true
 disableHLJS: false
