--- a/content/posts/PaperNotes/实体关系抽取方法研究综述_李冬梅.md
+++ b/content/posts/PaperNotes/实体关系抽取方法研究综述_李冬梅.md
@@ -32,7 +32,7 @@ cover:
 
 定义：
 
-- 通常将实体间的关系形式化地描述为关系三元组 $<E_1,R,E_2>$ ，其中 $E$ 为实体类型，$R$ 为关系描述类型。
+- 通常将实体间的关系形式化地描述为关系三元组 $\{E_1,R,E_2\}$ ，其中 $E$ 为实体类型，$R$ 为关系描述类型。
 
 关系抽取与命名实体识别、关系触发词识别构成一个端到端任务的框架：
 
