--- a/content/posts/DailyDev/华为云部署踩坑.md
+++ b/content/posts/DailyDev/华为云部署踩坑.md
@@ -154,7 +154,7 @@ sudo systemctl enable docker
 
 ### Docker 容器打包
 
-先写好Dockerfile，怎么写可以根据需要问chatgpt，它的本质作用是只在容器化的时候才会调用。
+先写好Dockerfile，怎么写可以根据需要问chatgpt，它的本质作用是只在镜像化的时候才会调用。
 
 下面是使用 commit 命令直接把容器打包成镜像：
 
