update <Designing Data-Intensive Applications> note 1

--- a/content/posts/DailyDev/《数据密集型系统设计》记录.md
+++ b/content/posts/DailyDev/《数据密集型系统设计》记录.md
@@ -23,3 +23,167 @@ UseHugoToc: true
 ---
 
 # 《数据密集型系统设计》记录
+
+**本书的电子版本链接：[Vonng/ddia: 《Designing Data-Intensive Application》DDIA中文翻译](https://github.com/Vonng/ddia)** 
+
+## 3. 存储与检索
+
+本章围绕两大类存储引擎：日志结构（log-structured）的存储引擎，以及面向页面（page-oriented）的存储引擎（例如 B 树）。
+
+### 数据库核心：数据结构
+
+这里所使用的“日志”是一个更一般性的概念：一个支持 `append-only` 仅追加操作的记录序列。
+
+为了高效查找数据库中特定键的值，需要用到索引。索引是从主要数据中衍生的额外结构，维护它会产生额外开销，特别是写入时。任何类型的索引通常都会减慢写入速度，因为每次写入数据时都需要更新索引。这是存储系统中一个重要的权衡：精心选择的索引加快了读查询的速度，但是每个索引都会拖慢写入速度。因为这个原因，数据库默认并不会索引所有的内容，而需要程序员或数据库管理员（DBA），基于对应用的典型查询模式的了解来手动选择索引。
+
+#### SSTable
+
+把键值对的序列按照键进行排序，这个格式称为排序字符串表（Sorted String Table, SSTable）。此时再要求每个键值在每个合并的段文件中出现一次。与使用散列索引的日志段相比，SSTable 有几个大的优势：
+
+- 即使文件大于可用内存，合并段的操作仍然是简单高效：
+  - 一开始并排读取多个输入文件，查看每个文件中的第一个键，复制最低的键（根据排序顺序）到输出文件，不断重复此步骤，将产生一个新的合并段文件，而且它也是也按键排序的。
+  - 如果在几个输入段中出现相同的键，该怎么办？请记住，每个段都包含在一段时间内写入数据库的所有值。这意味着一个输入段中的所有值一定比另一个段中的所有值都更近（假设我们总是合并相邻的段）。当多个段包含相同的键时，我们可以保留最近段的值，并丢弃旧段中的值。
+- 为了在文件中找到一个特定的键，你不再需要在内存中保存所有键的索引：
+  - 假设你正在内存中寻找键 `handiwork`，但是你不知道这个键在段文件中的确切偏移量。然而，你知道 `handbag` 和 `handsome` 的偏移，而且由于排序特性，你知道 `handiwork` 必须出现在这两者之间。这意味着你可以跳到 `handbag` 的偏移位置并从那里扫描，直到你找到 `handiwork`（或没找到，如果该文件中没有该键）。
+- 由于读取请求无论如何都需要扫描所请求范围内的多个键值对，因此可以将这些记录分组为块（block），并在将其写入硬盘之前对其进行压缩。稀疏内存索引中的每个条目都指向压缩块的开始处。除了节省硬盘空间之外，压缩还可以减少对 I/O 带宽的使用。
+
+那么，可以构建 SSTable 了，可以让存储引擎这样工作：
+
+- 有新写入时，将其添加到内存中的平衡树数据结构（例如红黑树），这个内存树有时被称为内存表（memtable）。
+- 当内存表大于某个阈值（通常为几兆字节）时，将其作为 SSTable 文件写入硬盘。这可以高效地完成，因为树已经维护了按键排序的键值对。新的 SSTable 文件将成为数据库中最新的段。当该 SSTable 被写入硬盘时，新的写入可以在一个新的内存表实例上继续进行。
+- 收到读取请求时，首先尝试在内存表中找到对应的键，如果没有就在最近的硬盘段中寻找，如果还没有就在下一个较旧的段中继续寻找，以此类推。
+- 后台进程周期性地执行合并和压缩过程，以合并段文件，并将已覆盖或已删除的值丢弃。
+
+这样的索引结构被称为 LSM-Tree（Log-Structured Merge-Tree）。
+
+当查找数据库中不存在的键时，LSM 树算法可能会很慢。为了优化这种访问，存储引擎通常会使用布隆过滤器。还可以使用大小分级和分层压缩。对于大小分级，较新和较小的 SSTables 相继被合并到较旧的和较大的 SSTable 中。对于分层压缩，键的范围被拆分到多个较小的 SSTables，而较旧的数据被移动到单独的层级，这使得压缩能够逐步进行并且使用较少的硬盘空间。
+
+#### B-Tree
+
+前面看到的日志结构索引将数据库分解为可变大小的段，通常是几兆字节或更大的大小，并且总是按顺序写入段。相比之下，B 树将数据库分解成固定大小的块或分页，传统上大小为 4KB（有时会更大），并且一次只能读取或写入一个页面。这种设计更接近于底层硬件，因为硬盘空间也是按固定大小的块来组织的。
+
+在 B 树的底层中，写操作是用新数据覆写硬盘上的页面，并假定覆写不改变页面的位置。即当页面被覆写时，对该页面的所有引用保持完整。这与日志结构索引（如 LSM 树）形成鲜明对比，后者只追加到文件（并最终删除过时的文件），但从不修改文件中已有的内容。
+
+为了使数据库能处理异常崩溃的场景，B 树实现通常会带有一个额外的硬盘数据结构：预写式日志（WAL，即 write-ahead log，也称为重做日志，即 redo log）。这是一个仅追加的文件，每个 B 树的修改在其能被应用到树本身的页面之前都必须先写入到该文件。当数据库在崩溃后恢复时，这个日志将被用来使 B 树恢复到一致的状态。
+
+#### 两者对比
+
+| 特性         | LSM-Tree           | B-Tree           |
+| ------------ | ------------------ | ---------------- |
+| **写入吞吐** | 高（顺序写）       | 中（随机写）     |
+| **读取延迟** | 高（合并 SSTable） | 低（直接索引）   |
+| **空间放大** | 低（压缩合并）     | 中（页碎片）     |
+| **适用场景** | 写密集、低频更新   | 读密集、高频更新 |
+
+#### 其他索引结构
+
+- 将值存储到索引中：
+
+  索引中的键是查询要搜索的内容，而其值可以是以下两种情况之一：它可以是实际的行（文档，顶点），也可以是对存储在别处的行的引用。
+
+  - 后一种情况下，行被存储的地方被称为堆文件，并且存储的数据没有特定的顺序（它可以是仅追加的，或者它可以跟踪被删除的行以便后续可以用新的数据进行覆盖）。堆文件方法很常见，因为它避免了在存在多个次级索引时对数据的复制：每个索引只引用堆文件中的一个位置，实际的数据都保存在一个地方。
+  - 从索引到堆文件的额外跳跃对读取来说性能损失太大，因此希望将被索引的行直接存储在索引中，这种方式被称为聚集索引。在聚集索引（在索引中存储所有的行数据）和 非聚集索引（仅在索引中存储对数据的引用）之间的折衷被称为覆盖索引，其在索引内存储表的一部分列，这允许通过单独使用索引来处理一些查询。
+
+- 多列索引：
+
+  最常见的多列索引被称为连接索引 ，它通过将一列的值追加到另一列后面，简单地将多个字段组合成一个键（索引定义中指定了字段的连接顺序）。
+
+  多维索引是一种查询多个列的更一般的方法，这对于地理空间数据尤为重要。例如，餐厅搜索网站可能有一个数据库，其中包含每个餐厅的经度和纬度。当用户在地图上查看餐馆时，网站需要搜索用户正在查看的矩形地图区域内的所有餐馆。这需要一个二维范围查询，如下所示：
+
+  ```sql
+  SELECT * FROM restaurants WHERE latitude > 51.4946 AND latitude < 51.5079
+                            AND longitude > -0.1162 AND longitude < -0.1004;
+  ```
+
+  一个标准的 B 树或者 LSM 树索引不能够高效地处理这种查询：它可以返回一个纬度范围内的所有餐馆（但经度可能是任意值），或者返回在同一个经度范围内的所有餐馆（但纬度可能是北极和南极之间的任意地方），但不能同时满足两个条件。
+
+  多维索引不仅可以用于地理位置。例如，在电子商务网站上可以使用建立在（红，绿，蓝）维度上的三维索引来搜索特定颜色范围内的产品，也可以在天气观测数据库中建立（日期，温度）的二维索引，以便有效地搜索 2013 年内的温度在 25 至 30°C 之间的所有观测资料。
+
+### 事务处理与分析处理
+
+行式存储和列式存储的根本差异：
+
+- OLTP（联机事务处理）：
+  - 特点：频繁的短事务（如订单创建、用户注册）。
+  - 存储模型：行存储（Row-Based）。
+    - 优势：快速读取单行数据（所有列连续存储）。
+    - 劣势：扫描大量数据时需读取冗余列（如仅需统计某列总和）。
+- OLAP（联机分析处理）：
+  - 特点：复杂的分析查询（如统计报表）。
+  - 存储模型：列存储（Column-Based，如Parquet、ClickHouse）。
+    - 优势：
+      1. 高压缩率（同列数据类型一致）。
+      2. 仅读取所需列，减少I/O。
+      3. 适合向量化计算（SIMD优化）。
+    - 劣势：随机写入效率低（需批量写入）。
+
+### 列式存储
+
+列式存储背后的想法很简单：不要将所有来自一行的值存储在一起，而是将来自每一列的所有值存储在一起。如果每个列式存储在一个单独的文件中，查询只需要读取和解析查询中使用的那些列，这可以节省大量的工作。
+
+除了仅从硬盘加载查询所需的列以外，我们还可以通过压缩数据来进一步降低对硬盘吞吐量的需求。通常情况下，一列中不同值的数量与行数相比要小得多（例如，零售商可能有数十亿的销售交易，但只有 100,000 个不同的产品）。现在我们可以拿一个有 $n$ 个不同值的列，并把它转换成 $n$ 个独立的位图：每个不同值对应一个位图，每行对应一个比特位。如果该行具有该值，则该位为 1，否则为 0。这些位图索引非常适合数据仓库中常见的各种查询。
+
+
+
+## 5. 数据复制
+
+### 主节点与从节点
+
+
+
+### 复制滞后问题
+
+
+
+### 多主节点复制
+
+
+
+### 无主节点复制
+
+
+
+## 6. 数据分区
+
+### 数据分区与数据复制
+
+### 键值数据的分区
+
+### 分区与二级索引
+
+### 分区再平衡
+
+### 请求路由
+
+
+
+## 7. 事务
+
+### 深入理解事务
+
+### 弱隔离级别
+
+### 串行化
+
+
+
+## 8. 分布式系统的挑战
+
+### 故障与部分失效
+
+### 不可靠的网络
+
+### 不可靠的时钟
+
+
+
+## 9. 一致性与共识
+
+### 一致性保证
+
+### 可线性化
+
+### 顺序保证
+
+### 分布式事务与共识
+
