update <Designing Data-Intensive Applications> note 2

--- a/content/posts/DailyDev/《数据密集型系统设计》记录.md
+++ b/content/posts/DailyDev/《数据密集型系统设计》记录.md
@@ -129,19 +129,115 @@ UseHugoToc: true
 
 ### 主节点与从节点
 
+主从复制的工作原理：
 
+1. 选定一个节点为主节点。当客户端要向数据库写入时，它必须将请求发送给主节点，主节点将新数据写入其本地存储。
+2. 其他节点为从节点。每当主节点写入了新数据，它也会将数据变更大送给所有的从节点，称之为复制日志。每个从节点拉取复制日志，并相应更新其本地数据库副本。
+3. 客户端可以向任一节点发送查询请求，但只有主节点以及接收写入请求。
+
+#### 同步复制和异步复制
+
+- 同步复制：在向用户报告写入成功并使结果对其他用户可见之前，主节点需要等待从节点的确认，确保从节点已经收到写入操作。
+
+- 异步复制：主节点发送消息，但不等待该从节点的响应。
+
+同步复制的优点是，从节点能保证有与主节点一致的最新数据副本。缺点是，如果同步从节点没有响应（比如它已经崩溃，或者出现网络故障，或其它任何原因），主节点就无法处理写入操作。主节点必须阻止所有写入，并等待同步副本再次可用。
+
+因此，将所有从节点都设置为同步的是不切实际的：任何一个节点的中断都会导致整个系统停滞不前。实际上，如果在数据库上启用同步复制，通常意味着其中一个从节点是同步的，而其他的从节点则是异步的。如果该同步从节点变得不可用或缓慢，则将一个异步从节点改为同步运行。这保证你至少在两个节点上拥有最新的数据副本：主节点和同步从节点，这种配置有时也被称为半同步。
+
+通常情况下，基于主节点的复制都配置为完全异步。在这种情况下，如果主节点失效且不可恢复，则任何尚未复制给从节点的写入都会丢失。这意味着即使已经向客户端确认成功，写入也不能保证是持久（Durable） 的。然而，一个完全异步的配置也有优点：即使所有的从节点都落后了，主节点也可以继续处理写入。
+
+#### 设置新从节点
+
+1. 获取主节点的一致性快照。
+2. 将快照复制到新的从节点。
+3. 从节点连接到主节点，并拉取快照之后发生的所有数据变更。
+4. 当从节点处理完成后，就可以继续及时处理主节点发生的数据变化了。
+
+#### 处理节点宕机
+
+- 从节点失效：
+  - 在其本地磁盘上，每个从节点记录从主节点收到的数据变更。从节点可以从日志中知道在发生故障之前处理的最后一个事务。因此，从节点可以连接到主节点，并请求在从节点断开期间发生的所有数据变更。
+- 主节点失效：
+  - 主节点失效就需要将一个从节点提升为主节点，需要重新配置客户端，以将它们的写操作发送给新的主节点，其他从节点需要开始拉取来自新主节点的数据变更。这一过程称为故障切换。
+  - 故障切换过程：
+    1. 确认主节点失效。如果一个节点在一段时间内（例如 30 秒）没有响应，就认为它挂了。
+    2. 选择一个新的主节点。这可以通过选举过程（主节点由剩余副本以多数选举产生）来完成，或者可以由之前选定的控制器节点（controller node）来指定新的主节点。主节点的最佳人选通常是拥有旧主节点最新数据副本的从节点（以最小化数据损失）。让所有的节点同意一个新的领导者，是一个共识问题。
+    3. 重新配置系统以启用新的主库。系统需要确保旧主库意识到新主库的存在，并成为一个从库。
+  - 在故障切换过程中可能会出现诸多问题：
+    - 如果使用异步复制，则新主节点可能没有收到老主节点宕机前最后的写入操作。最常见的解决方案是简单丢弃老主节点未复制的写入。
+    - 如果数据库需要和其他外部存储相协调，那么丢弃写入内容是极其危险的操作。
+    - 发生某些故障时可能会出现两个节点都以为自己是主节点的情况，这种情况称为脑裂。如果两个主节点都可以接受写操作，却没有冲突解决机制，那么数据就可能丢失或损坏。
+    - 在主节点失效的情况下，超时时间越长意味着恢复时间也越长。但是如果超时设置太短，又可能会出现不必要的故障切换。
+
+#### 复制日志的实现
+
+- 基于语句的复制：在最简单的情况下，主节点记录下它执行的每个写入请求并将该语句日志发送给从节点。对于关系数据库来说，这意味着每个 `INSERT`、`UPDATE` 或 `DELETE` 语句都被转发给每个从节点，每个从节点解析并执行该 SQL 语句。这种方式在语句调用了一些非确定性函数（如 `RAND` 获取随机数）、使用了自增列等情况下不可用。
+- 传输预写式日志 WAL：对于日志结构存储引擎的 SSTables 和 LSM-trees ，日志是主要的存储方式。对于采用覆盖写磁盘的 Btree，每次修改会预先写入日志。所以可以采用完全相同的 WAL 在另一个节点上构建副本。主要缺点是日志记录的数据非常底层：WAL 包含哪些磁盘块中的哪些字节发生了更改，这使复制与存储引擎紧密耦合。如果数据库将其存储格式从一个版本更改为另一个版本，通常不可能在主节点和从节点上运行不同版本的数据库软件。
+- 基于行的逻辑日志复制：将复制日志从存储引擎的内部实现中解耦出来，这种复制日志被称为逻辑日志，以将其与存储引擎的（物理）数据表示区分开来。关系数据库的逻辑日志通常是以行的粒度来描述对数据库表的写入记录的序列。MySQL 的二进制日志（当配置为使用基于行的复制时）使用了这种方法。对于外部应用程序来说，逻辑日志格式也更容易解析。
+- 基于触发器的复制：触发器允许你将数据更改（写入事务）发生时自动执行的自定义应用程序代码注册在数据库系统中。触发器有机会将更改记录到一个单独的表中，使用外部程序读取这个表，再加上一些必要的业务逻辑，就可以将数据变更复制到另一个系统去。
 
 ### 复制滞后问题
 
+主从复制中，实现完全的同步方案是不现实的、代价巨大的，但是哪怕是半同步方案、完全异步方案依然存在复制延迟问题，下面提到的解决复制延迟的方案都为了保证主从的最终一致性。
 
+#### 读自己的写
+
+许多应用让用户提交一些数据，然后查看他们提交的内容。提交新数据时，必须将其发送给主节点，但是当用户查看数据时，可以通过从节点进行读取。
+
+对于异步复制，如果用户在写入后马上就查看数据，则新数据可能尚未到达副本。对用户而言，看起来好像是刚提交的数据丢失了。在这种情况下，我们需要写后读一致性，如果用户重新加载页面，他们总会看到他们自己提交的任何更新。它不会对其他用户的写入做出承诺，其他用户的更新可能稍等才会看到。
+
+另一种复杂的情况发生在同一位用户从多个设备（例如桌面浏览器和移动 APP）请求服务的时候。这种情况下可能就需要提供跨设备的写后读一致性：如果用户在一个设备上输入了一些信息，然后在另一个设备上查看，则应该看到他们刚输入的信息。
+
+> 关于写后读一致性的实现，略。
+
+#### 单调读
+
+从异步从节点读取时可能发生的异常的第二个例子是用户可能会遇到时光倒流。如果用户从不同从节点进行多次读取，如首先查询了一个延迟很小的从节点，然后是一个延迟较大的从节点。
+
+单调读可以防止这种异常，单调读仅意味着如果一个用户顺序地进行多次读取，则他们不会看到时间回退，也就是说，如果已经读取到较新的数据，后续的读取不会得到更旧的数据。实现单调读的一种方式是确保每个用户总是从同一个副本进行读取（不同的用户可以从不同的副本读取）。
+
+#### 前缀一致读
+
+第三个复制延迟异常的例子违反了因果律。如果某些分区的复制速度慢于其他分区，那么观察者可能会在看到问题之前先看到答案。前缀一致读可以防止这种异常，即 如果一系列写入按某个顺序发生，那么任何人读取这些写入时，也会看见它们以同样的顺序出现。
+
+如果数据库总是以相同的顺序应用写入，而读取总是看到一致的前缀，那么这种异常不会发生。但是在许多分布式数据库中，不同的分区独立运行，因此不存在全局的写入顺序。
 
 ### 多主节点复制
 
+系统中存在多个主节点，每个主节点均可独立接收写请求，并通过异步方式将数据变更同步到其他主节点及其从节点。
 
+- 适用场景：
+  - 多数据中心：每个数据中心部署一个主节点，用户就近写入本地数据中心，减少跨区域延迟。
+  - 离线客户端操作：设备离线时作为本地主节点，联网时与其他节点同步（如协同编辑工具、备忘录同步）。
+  - 协作编辑：多个用户同时编辑同一文档时，本地副本异步同步。
+
+- 优点：
+  - 高可用性：单节点失效不影响其他主节点写入。
+  - 低延迟：用户就近写入本地数据中心。
+  - 容错性：容忍网络分区或数据中心级故障。
+- 缺点：
+  - 复杂性高：冲突解决、数据同步和一致性保障增加系统复杂度。
+  - 最终一致性：异步复制可能导致临时不一致（需应用层处理）。
 
 ### 无主节点复制
 
+无主节点，所有副本均可直接接收读写请求，客户端并行与多个节点交互。
 
+- 适用场景：
+
+  - 高可用与容错：节点失效无需切换，客户端直接与其他节点交互。
+
+  - 弱网络环境：宽松Quorum支持临时网络分区下的持续写入。
+
+  - 简单架构：无需主节点选举或复杂同步逻辑（如Dynamo、Cassandra）。
+
+- 优点：
+  - 高可用性：无单点故障，节点失效不影响服务。
+  - 灵活一致性：通过调整w/r参数平衡一致性与可用性。
+- 缺点：
+  - 并发冲突：需处理多版本合并或数据丢失风险（如LWW策略）。
+  - 运维复杂度：反熵和读修复可能增加系统负载。
 
 ## 6. 数据分区
 
