add <Understand Design Pattern Deeply>

--- a/content/posts/DailyDev/《数据密集型系统设计》记录.md
+++ b/content/posts/DailyDev/《数据密集型系统设计》记录.md
@@ -376,21 +376,22 @@ WHERE room_id = 123 AND
 
 
 
-## 8. 分布式系统的挑战
-
-### 故障与部分失效
-
-### 不可靠的网络
-
-### 不可靠的时钟
-
-
-
 ## 9. 一致性与共识
 
 ### 一致性保证
 
+分布式一致性主要是针对延迟和故障等问题来协调副本之间的状态。
+
 ### 可线性化
+
+在最终一致的数据库，如果你在同一时刻问两个不同副本相同的问题，可能会得到两个不同的答案。如果数据库可以提供只有一个副本的假象（即只有一个数据副本），那么每个客户端都会有相同的数据视图，且不必担心复制滞后了。这就是线性一致性（原子一致性、强一致性）的思想。在一个线性一致的系统中，只要一个客户端成功完成写操作，所有客户端从数据库中读取数据必须能够看到刚刚写入的值。要维护数据的单个副本的假象，系统应保障读到的值是最近的、最新的，而不是来自陈旧的缓存或副本。
+
+#### 依赖线性一致性
+
+- 锁定和领导者选举：一个使用单主复制的系统，需要确保领导者真的只有一个，而不是几个（脑裂）。一种选择领导者的方法是使用锁，每个节点在启动时尝试获取锁，成功者成为领导者。不管这个锁是如何实现的，它必须是线性一致的，所有节点必须就哪个节点拥有锁达成一致。而在 ZooKeeper、etcd 之类的协调服务中，线性一致性被用于实现分布式锁和领导者选举，它们使用一致性算法，以容错的方式实现线性一致的操作。
+- 约束和唯一性保证：唯一性约束在数据库中很常见，例如，用户名或电子邮件地址必须唯一标识一个用户，而在文件存储服务中，不能有两个具有相同路径和文件名的文件。如果要在写入数据时强制执行此约束（例如，如果两个人试图同时创建一个具有相同名称的用户或文件，其中一个将返回一个错误），则需要线性一致性。
+
+
 
 ### 顺序保证
 
