update <Understand Design Pattern Deeply> 1

--- a/content/posts/DailyDev/《深入理解设计模式》记录.md
+++ b/content/posts/DailyDev/《深入理解设计模式》记录.md
@@ -139,3 +139,227 @@ func GetEnumInstance() *enumSingleton {
 }
 ```
 
+
+
+## 工厂模式
+
+工厂模式是一种创建型设计模式，其核心思想是通过工厂类封装对象的创建过程，降低代码耦合度，提升扩展性。
+
+### 简单工厂模式
+
+特点：由一个工厂类根据参数决定创建哪种具体产品，客户端无需直接实例化对象。
+
+```go
+package main
+
+// 产品接口
+type Product interface {
+    Use() string
+}
+
+// 具体产品A
+type ConcreteProductA struct{}
+
+func (p *ConcreteProductA) Use() string {
+    return "Product A"
+}
+
+// 具体产品B
+type ConcreteProductB struct{}
+
+func (p *ConcreteProductB) Use() string {
+    return "Product B"
+}
+
+// 工厂类
+type Factory struct{}
+
+func (f *Factory) CreateProduct(typ string) Product {
+    switch typ {
+    case "A":
+        return &ConcreteProductA{}
+    case "B":
+        return &ConcreteProductB{}
+    default:
+        return nil
+    }
+}
+
+// 使用示例
+func main() {
+    factory := Factory{}
+    productA := factory.CreateProduct("A")
+    println(productA.Use()) // 输出：Product A
+}
+```
+
+### 工厂方法模式
+
+特点：定义抽象工厂接口，由子类决定实例化的具体产品，符合开闭原则。只有一个抽象产品接口、抽象工厂接口。
+
+适用场景：产品类型较多且可能扩展，需分离创建逻辑与业务逻辑。
+
+```go
+package main
+
+// 产品接口
+type Transport interface {
+    Deliver() string
+}
+
+// 具体产品：卡车
+type Truck struct{}
+
+func (t *Truck) Deliver() string {
+    return "Delivering by land"
+}
+
+// 具体产品：轮船
+type Ship struct{}
+
+func (s *Ship) Deliver() string {
+    return "Delivering by sea"
+}
+
+// 抽象工厂接口
+type LogisticsFactory interface {
+    CreateTransport() Transport
+}
+
+// 卡车工厂
+type TruckFactory struct{}
+
+func (tf *TruckFactory) CreateTransport() Transport {
+    return &Truck{}
+}
+
+// 轮船工厂
+type ShipFactory struct{}
+
+func (sf *ShipFactory) CreateTransport() Transport {
+    return &Ship{}
+}
+
+// 使用示例
+func main() {
+    truckFactory := &TruckFactory{}
+    truck := truckFactory.CreateTransport()
+    println(truck.Deliver()) // 输出：Delivering by land
+}
+```
+
+### 抽象工厂模式
+
+特点：创建多个相关或依赖的产品族（如不同品牌的全套产品），强调产品之间的关联性。由多个抽象产品接口、一个抽象工厂接口。
+适用场景：需要生产一组配套对象（如不同风格的UI组件、品牌的全套硬件）。
+
+```go
+package main
+
+// 产品接口：手机
+type Phone interface {
+    Call() string
+}
+
+// 华为手机
+type HuaweiPhone struct{}
+
+func (h *HuaweiPhone) Call() string {
+    return "Huawei phone calling"
+}
+
+// 苹果手机
+type IPhone struct{}
+
+func (i *IPhone) Call() string {
+    return "iPhone calling"
+}
+
+// 产品接口：电脑
+type Computer interface {
+    Work() string
+}
+
+// 华为电脑
+type HuaweiComputer struct{}
+
+func (h *HuaweiComputer) Work() string {
+    return "Huawei computer working"
+}
+
+// 苹果电脑
+type MacBook struct{}
+
+func (m *MacBook) Work() string {
+    return "MacBook working"
+}
+
+// 抽象工厂接口
+type TechFactory interface {
+    CreatePhone() Phone
+    CreateComputer() Computer
+}
+
+// 华为工厂
+type HuaweiFactory struct{}
+
+func (hf *HuaweiFactory) CreatePhone() Phone {
+    return &HuaweiPhone{}
+}
+
+func (hf *HuaweiFactory) CreateComputer() Computer {
+    return &HuaweiComputer{}
+}
+
+// 苹果工厂
+type AppleFactory struct{}
+
+func (af *AppleFactory) CreatePhone() Phone {
+    return &IPhone{}
+}
+
+func (af *AppleFactory) CreateComputer() Computer {
+    return &MacBook{}
+}
+
+// 使用示例
+func main() {
+    factory := &HuaweiFactory{}
+    phone := factory.CreatePhone()
+    computer := factory.CreateComputer()
+    println(phone.Call(), computer.Work()) // 输出：Huawei phone calling Huawei computer working
+}
+```
+
+
+
+## 原型模式
+
+原型模式（Prototype Pattern）是一种创建型设计模式，其核心思想是通过复制现有对象（原型）来生成新对象，而非通过传统的类实例化方式（如`new`关键字）。
+
+原型模式通过克隆机制创建对象，允许一个对象作为原型，基于其生成新实例。这种方式避免了重复初始化带来的性能损耗，尤其当对象包含复杂数据结构或依赖外部资源时。
+
+原型模式的实现有两种：
+
+- 浅拷贝：仅复制对象的基本类型属性和引用地址，不复制引用指向的实际对象。所有克隆对象共享同一引用成员。
+- 深拷贝：递归复制所有引用类型成员，确保克隆对象与原对象完全独立。
+
+
+
+## 适配器模式
+
+
+
+## 装饰器模式
+
+
+
+## 代理模式
+
+
+
+## 策略模式
+
+
+
+## 命令模式
