add content search support

--- a/content/posts/DailyDev/《深入理解设计模式》记录.md
+++ b/content/posts/DailyDev/《深入理解设计模式》记录.md
@@ -20,6 +20,7 @@ ShowBreadCrumbs: true
 ShowPostNavLinks: true
 ShowRssButtonInSectionTermList: true
 UseHugoToc: true
+searchHidden: false
 ---
 
 # 《深入理解设计模式》记录
