--- a/content/posts/DailyDev/正则表达式必知必会__读书笔记.md
+++ b/content/posts/DailyDev/正则表达式必知必会__读书笔记.md
@@ -18,6 +18,7 @@ ShowBreadCrumbs: true
 ShowPostNavLinks: true
 ShowRssButtonInSectionTermList: true
 UseHugoToc: true
+searchHidden: false
 ---
 
 ## 第二章. 匹配单个字符
