--- a/content/posts/DailyDev/《云原生开发实践》记录.md
+++ b/content/posts/DailyDev/《云原生开发实践》记录.md
@@ -20,6 +20,7 @@ ShowBreadCrumbs: true
 ShowPostNavLinks: true
 ShowRssButtonInSectionTermList: true
 UseHugoToc: true
+searchHidden: false
 ---
 
 # 《云原生开发实践》记录
