--- a/content/posts/DailyDev/《数据密集型系统设计》记录.md
+++ b/content/posts/DailyDev/《数据密集型系统设计》记录.md
@@ -20,6 +20,7 @@ ShowBreadCrumbs: true
 ShowPostNavLinks: true
 ShowRssButtonInSectionTermList: true
 UseHugoToc: true
+searchHidden: false
 ---
 
 # 《数据密集型系统设计》记录
