--- a/content/posts/DailyDev/华为云部署踩坑.md
+++ b/content/posts/DailyDev/华为云部署踩坑.md
@@ -20,6 +20,7 @@ ShowBreadCrumbs: true
 ShowPostNavLinks: true
 ShowRssButtonInSectionTermList: true
 UseHugoToc: true
+searchHidden: false
 ---
 
 ## 华为云部署踩坑
