--- a/content/posts/PaperNotes/基于预训练模型的医药说明书实体抽取方法研究_陈仲永.md
+++ b/content/posts/PaperNotes/基于预训练模型的医药说明书实体抽取方法研究_陈仲永.md
@@ -26,6 +26,7 @@ cover:
     caption: "" # display caption under cover
     relative: false # when using page bundles set this to true
     hidden: true # only hide on current single page
+searchHidden: false
 ---
 
 ## 基于预训练模型的部分标签命名实体识别模型
