--- a/content/posts/WeeklyWorking/2024_07_22-2024_07_28.md
+++ b/content/posts/WeeklyWorking/2024_07_22-2024_07_28.md
@@ -20,6 +20,7 @@ ShowBreadCrumbs: true
 ShowPostNavLinks: true
 ShowRssButtonInSectionTermList: true
 UseHugoToc: true
+searchHidden: false
 ---
 
 ## 本周任务
