--- a/content/posts/DailyDev/《数据密集型系统设计》记录.md
+++ b/content/posts/DailyDev/《数据密集型系统设计》记录.md
@@ -392,9 +392,99 @@ WHERE room_id = 123 AND
 - 锁定和领导者选举：一个使用单主复制的系统，需要确保领导者真的只有一个，而不是几个（脑裂）。一种选择领导者的方法是使用锁，每个节点在启动时尝试获取锁，成功者成为领导者。不管这个锁是如何实现的，它必须是线性一致的，所有节点必须就哪个节点拥有锁达成一致。而在 ZooKeeper、etcd 之类的协调服务中，线性一致性被用于实现分布式锁和领导者选举，它们使用一致性算法，以容错的方式实现线性一致的操作。
 - 约束和唯一性保证：唯一性约束在数据库中很常见，例如，用户名或电子邮件地址必须唯一标识一个用户，而在文件存储服务中，不能有两个具有相同路径和文件名的文件。如果要在写入数据时强制执行此约束（例如，如果两个人试图同时创建一个具有相同名称的用户或文件，其中一个将返回一个错误），则需要线性一致性。
 
+#### 实现线性化系统
 
+- 主从复制（部分支持线性化）：如果从主节点或同步更新的从节点上读取，则可以满足线性化。但不是每个数据库都可以通过主从复制实现线性化，主要原因是采用了快照隔离的设计或者实现有 bug 。
+- 共识算法（可线性化）：后面详细介绍。
+- 多主复制（不能线性化）、无主复制（不一定能线性化）。
+
+#### 线性化的代价
+
+线性化会以下代价：
+
+- 延迟增加：线性化所有操作按全局顺序排列，并满足实时性约束。这通常需要跨节点的协调，导致操作必须等待多数节点确认后才能完成，增加了请求延迟。
+- 可用性牺牲（CAP 理论）：根据CAP定理，网络分区发生时，系统需在一致性（C）和可用性（A）间选择。线性化要求强一致性（CP系统），可能导致部分节点在分区时拒绝服务，降低可用性。
+- 吞吐量受限：严格的操作顺序可能限制并行处理能力。多节点参与的共识过程也需要大量消息交换，消耗网络带宽和CPU资源，限制系统整体吞吐。
+
+>CAP 理论目的是探讨分布式系统设计的权衡之道：
+>
+>- C（Consistency）：一致性。
+>- A（Availability）：可用性。
+>- P（Partition tolerance）：分区容错性。
+>
+>系统只能选择其中两个特性支持。但这种理解存在误导性，网络分区是一种故障，是无法选择或逃避分区的问题。
 
 ### 顺序保证
 
+#### 顺序与因果关系
+
+如果系统服从因果关系所规定的顺序，就称之为因果一致性。如快照隔离提供了因果一致性，当从数据库中读取数据时，如果查询到了某些数据，也一定能看到出发该数据的前序事件。
+
+可线性化一定包含着因果关系，任意可线性化的系统都将正确地保证因果关系。这一结论是线性化系统更加简单易懂。在许多情况下，许多看似需要线性化的系统实际上真正需要的是因果一致性。
+
+#### 序列号排序
+
+跟踪所有的因果关系不切实际，使用序列号或时间戳来排序事件是更好的方法。
+
+可以按照与因果关系一致的顺序来构建序列号，这样的全局排序可以获取所有的因果关系。例如在主从复制数据库中，复制日志定义了与因果关系一致的写操作全序关系。当单一主节点为每个操作递增某个计数器，从而为复制日志中的每个操作复制一个单调递增的序列号，从节点也是一样的序列号。
+
+然而在多主复制数据库中，产生的序列号在每个主节点中都是独立的，因此因果关系无法得到保证。这点可以由兰伯特时间戳解决。
+
+首先每个节点有一个唯一的标识，且都有一个计数器记录自己处理的请求总数。兰伯特时间戳格式如下：（计数器，节点 ID），节点 ID 保证了时间戳的唯一性。兰伯特时间戳与实践的时间不存在直接对应关系，但是可以保证全序：给定某个兰伯特时间戳，计数器大的那个时间戳大；如果计数器相同，则节点 ID 大的时间戳大。因此，兰伯特时间戳解决了多主复制数据库的因果一致性。但是当涉及到分布式系统的并发操作，兰伯特时间戳并不能解决这个一致性问题。
+
+#### 全序关系广播
+
+全序关系广播是指节点之间交换消息的某种协议，它要求满足两个基本安全属性：
+
+- 可靠发送：没有消息丢失，如果消息发送到了某一节点，则它一定要发送到所有节点。
+- 严格有序：消息总是以相同顺序发送给每个节点。
+
+有了全序关系广播就可以构建线性化的存储系统，比如以追加日志的方式来实现线性化的 CAS 操作：
+
+1. 在日志中追加一条消息，并指明想要的数据。
+2. 读取日志，将其广播给所有节点，并等待回复。
+3. 检查是否有任何消息声称该数据已被占用，如果第一条这样的回复来自于当前节点，那么成功获得该数据，反之终止操作。
+
+由于日志条目以相同的顺序发送到所有节点，而如果存在多个并发写入，则需要决定哪个请求在先，选择第一个写请求作为获胜者，并终止其他请求。此过程保证了线性化写入，但无法保证线性化读取。
+
+可以证明线性化的 CAS 操作与全序关系广播二者都等价于共识问题，如果能解决其中一个，就可以应用于其他问题。
+
 ### 分布式事务与共识
+
+ #### 原子提交与两阶段提交
+
+在分布式事务中，原子性要求事务的所有操作要么全部提交，要么全部中止。
+
+两阶段提交（2PC） 通过协调者（Coordinator）和参与者（Participant）的交互，分两个阶段实现原子提交：
+
+1. 准备阶段：先向所有参与者发送“准备提交”请求，附带事务数据，然后参与者进行预提交。参与者检查本地是否可提交，若可提交，将事务日志写入磁盘，回复“同意”，若不可提交（如违反约束），回复“中止”。
+2. 提交/中止阶段：
+   - 协调者决策：
+     - 若收到所有参与者的“同意”，协调者决定提交，持久化提交决定到日志。
+     - 若任一参与者回复“中止”或超时未响应，协调者决定中止。
+   - 协调者广播决定：向所有参与者发送提交或中止指令。
+   - 参与者根据指令提交或中止事务，释放资源，并回复确认（ACK）。协调者收到所有ACK后，事务结束。
+
+2PC 容易遇到以下问题：
+
+- 协调者单点故障：若协调者在阶段2宕机，参与者可能因未收到最终指令而阻塞（处于“不确定”状态），导致资源长期锁定。
+- 参与者故障：参与者在回复“同意”后宕机，恢复后必须能根据协调者日志完成提交或中止，否则可能违反原子性。
+- 网络分区：若协调者与部分参与者失联，可能导致部分节点提交、部分节点中止，破坏原子性。
+
+可以使用三阶段提交（3PC）或共识算法替代。
+
+#### 支持容错的共识
+
+共识算法必须满足以下性质：
+
+- 协商一致性：所有的节点都接受相同的决议。
+- 诚实性：所有节点不能反悔。
+- 合法性：如果决定了值，则这个值一定是由某个节点所提议的。
+- 可终止性：节点如果不崩溃则最终一定可以达成协议。
+
+如果不关心容错，那么满足前三个属性很容易。可终止性引入了容错的思想，它强调一个共识算法不能原地空转，即必须取得进展。即使某些节点出现了故障，其他节点也必须最终做出决定。可终止性的前提是，发生崩溃或不可用的节点数必须小于半数。
+
+共识算法有 Paxos、Raft等，它们决定了一系列值，然后采用全序关系广播算法。
+
+
 
