--- a/content/posts/DailyDev/《深入理解设计模式》记录.md
+++ b/content/posts/DailyDev/《深入理解设计模式》记录.md
@@ -1,5 +1,5 @@
 ---
-title: "《深入理解设计模式》记录"
+       title: "《深入理解设计模式》记录"
 date: 2025-03-02
 aliases: ["/Daliy Dev"]
 tags: ["Design Pattern"]
@@ -24,6 +24,8 @@ searchHidden: false
 ---
 
 # 《深入理解设计模式》记录
+
+**这里只记录了相对常用、面试常问的设计模式。**
 
 ## 单例模式
 
@@ -349,18 +351,262 @@ func main() {
 
 ## 适配器模式
 
+适配器模式用于解决接口不兼容的问题，通过将一个类的接口转换成客户端期望的另一个接口，使得原本不兼容的类可以协同工作。
+
+适配器模式由三部分组成：
+
+- 目标接口
+- 被适配者（Adaptee）
+- 适配器
+
+适配器模式适合应用于整合旧系统、第三方库兼容等场景，能提高代码复用性。
+
+### 类适配器
+
+```go
+package main
+
+import "fmt"
+
+// --- 目标接口 ---
+type USB interface {
+    Connect()
+}
+
+// --- 被适配者 ---
+type TypeC struct{}
+
+func (t *TypeC) TypeCConnect() {
+    fmt.Println("TypeC connected.")
+}
+
+// --- 适配器（对象适配器，通过组合实现）---
+type TypeCToUSBAdapter struct {
+    typeC *TypeC
+}
+
+func NewTypeCToUSBAdapter(typeC *TypeC) *TypeCToUSBAdapter {
+    return &TypeCToUSBAdapter{typeC: typeC}
+}
+
+func (a *TypeCToUSBAdapter) Connect() {
+    a.typeC.TypeCConnect() // 调用被适配者的方法
+}
+
+// 使用示例
+func main() {
+    typeC := &TypeC{}
+    usbAdapter := NewTypeCToUSBAdapter(typeC)
+    usbAdapter.Connect() // 输出: TypeC connected.
+}
+```
+
 
 
 ## 装饰器模式
+
+装饰器模式通过动态地给对象添加额外的职责，提供比继承更灵活的扩展方式。
+
+装饰器模式灵活扩展对象功能，支持运行时动态组合，且符合单一职责原则（每个装饰器只关注一个功能）。
+
+```go
+package main
+
+import "fmt"
+
+// --- 组件接口 ---
+type Coffee interface {
+    Cost() float64
+    Description() string
+}
+
+// --- 具体组件 ---
+type BlackCoffee struct{}
+
+func (b *BlackCoffee) Cost() float64 {
+    return 2.0
+}
+
+func (b *BlackCoffee) Description() string {
+    return "Black Coffee"
+}
+
+// --- 装饰器基类（通过嵌套接口实现）---
+type CoffeeDecorator struct {
+    coffee Coffee
+}
+
+func (d *CoffeeDecorator) Cost() float64 {
+    return d.coffee.Cost()
+}
+
+func (d *CoffeeDecorator) Description() string {
+    return d.coffee.Description()
+}
+
+// --- 具体装饰器：加牛奶 ---
+type MilkDecorator struct {
+    CoffeeDecorator
+}
+
+func NewMilkDecorator(coffee Coffee) *MilkDecorator {
+    return &MilkDecorator{CoffeeDecorator{coffee: coffee}}
+}
+
+func (m *MilkDecorator) Cost() float64 {
+    return m.coffee.Cost() + 0.5
+}
+
+func (m *MilkDecorator) Description() string {
+    return m.coffee.Description() + ", Milk"
+}
+
+// 使用示例
+func main() {
+    var coffee Coffee
+    coffee = &BlackCoffee{}
+    fmt.Printf("Cost: %.1f, Description: %s\n", coffee.Cost(), coffee.Description())
+    // 输出: Cost: 2.0, Description: Black Coffee
+
+    coffee = NewMilkDecorator(coffee)
+    fmt.Printf("Cost: %.1f, Description: %s\n", coffee.Cost(), coffee.Description())
+    // 输出: Cost: 2.5, Description: Black Coffee, Milk
+}
+```
 
 
 
 ## 代理模式
 
+代理模式是一种结构型设计模式，通过引入一个代理对象来控制对真实对象的访问，实现功能增强或访问控制。其核心在于解耦客户端与真实对象，代理对象与真实对象实现相同接口，客户端通过代理间接操作真实对象。
+
+代理模式的结构如下：
+
+- 抽象主题：定义代理和真实对象的公共接口（如图片加载接口）。
+- 真实主题：实际执行业务逻辑的类。
+- 代理：实现相同接口，控制对真实对象的访问（如权限检查、延迟加载）。
+- 客户端。
+
+使用代理模式可以使代码职责清晰、扩展性强（如新增日志功能无需修改真实对象）、保护真实对象，缺陷就是可能增加类数量（静态代理）、动态代理需反射机制可能影响性能。
+
+````go
+package main
+import "fmt"
+
+// 接口定义
+type Vehicle interface { Drive() }
+
+// 真实对象
+type Car struct{}
+func (c *Car) Drive() { fmt.Println("Car is being driven") }
+
+// 代理对象
+type CarProxy struct {
+    vehicle Vehicle
+    driver  *Driver
+}
+
+type Driver struct{ Age int }
+
+func NewCarProxy(driver *Driver) *CarProxy {
+    return &CarProxy{&Car{}, driver}
+}
+
+func (p *CarProxy) Drive() {
+    if p.driver.Age >= 16 {
+        p.vehicle.Drive()
+    } else {
+        fmt.Println("Driver too young!")
+    }
+}
+
+// 客户端
+func main() {
+    proxy := NewCarProxy(&Driver{12})
+    proxy.Drive() // 输出: Driver too young!
+    
+    proxy = NewCarProxy(&Driver{22})
+    proxy.Drive() // 输出: Car is being driven
+}
+````
+
 
 
 ## 策略模式
 
+策略模式是一种行为型设计模式，将一组算法封装为独立策略类，使客户端能动态切换算法。其核心是通过组合而非继承实现行为的灵活扩展。
+
+```go
+package main
+import "fmt"
+
+// 策略接口
+type PricingStrategy interface { CalculatePrice(float64) float64 }
+
+// 具体策略
+type RegularStrategy struct{}
+func (s *RegularStrategy) CalculatePrice(p float64) float64 { return p }
+
+type VIPStrategy struct{}
+func (s *VIPStrategy) CalculatePrice(p float64) float64 { return p * 0.9 }
+
+// 上下文
+type PricingService struct{ strategy PricingStrategy }
+func (s *PricingService) SetStrategy(strategy PricingStrategy) { s.strategy = strategy }
+func (s *PricingService) Calculate(p float64) float64 { return s.strategy.CalculatePrice(p) }
+
+// 客户端
+func main() {
+    service := &PricingService{}
+    
+    service.SetStrategy(&RegularStrategy{})
+    fmt.Println(service.Calculate(100)) // 输出: 100
+    
+    service.SetStrategy(&VIPStrategy{})
+    fmt.Println(service.Calculate(100)) // 输出: 90
+}
+```
+
 
 
 ## 命令模式
+
+命令模式是一种行为型设计模式，将请求封装为对象，支持请求的排队、撤销和日志记录。核心在于解耦请求发送者与接收者，通过命令对象统一管理操作。
+
+```go
+package main
+import "fmt"
+
+// 命令接口
+type Command interface{ Execute() }
+
+// 具体命令
+type TVOnCommand struct{ tv *TV }
+func (c *TVOnCommand) Execute() { c.tv.On() }
+
+type TVOffCommand struct{ tv *TV }
+func (c *TVOffCommand) Execute() { c.tv.Off() }
+
+// 接收者
+type TV struct{}
+func (t *TV) On()  { fmt.Println("TV on") }
+func (t *TV) Off() { fmt.Println("TV off") }
+
+// 调用者
+type RemoteControl struct{ cmd Command }
+func (r *RemoteControl) SetCommand(cmd Command) { r.cmd = cmd }
+func (r *RemoteControl) Press()                 { r.cmd.Execute() }
+
+// 客户端
+func main() {
+    tv := &TV{}
+    remote := &RemoteControl{}
+    
+    remote.SetCommand(&TVOnCommand{tv})
+    remote.Press() // 输出: TV on
+    
+    remote.SetCommand(&TVOffCommand{tv})
+    remote.Press() // 输出: TV off
+}
+```
+
