update  <understand distrbuted algorithm deeply>

--- a/content/posts/DailyDev/《深入理解分布式共识算法》记录.md
+++ b/content/posts/DailyDev/《深入理解分布式共识算法》记录.md
@@ -2,7 +2,7 @@
 title: "《深入理解分布式共识算法》记录"
 date: 2025-03-07
 aliases: ["/Daily Dev"]
-tags: ["Paxos", "Raft", "ZAB"]
+tags: ["Paxos", "Raft"]
 categories: ["Daily Dev"]
 author: "Kurong"
 showToc: true
@@ -111,4 +111,65 @@ Seata 是解决微服务架构下分布式事务的框架。
 
 
 ## Paxos 
+
+Paxos 算法分为基础的 Basic Paxos 和 经过 Lamport 优化后提出的 Multi Paxos 。下面的算法讲解基于 Basic Paxos 。
+
+### 基本概念
+
+- 状态机（State Machine）：是一种计算机程序或系统的行为模型，它通过描述一系列状态以及在不同状态下的转移条件和动作来描述系统的行为。
+- 容错：在系统运行时对故障的容忍程度。
+- 共识：在对等的成员集合中，让每个成员都认可某一个值。
+- 多数派（Quorum）：在一个集群中超过一半以上的成员组成的集合，即成员个数大于 $N/2+1$ 。多数派的设定可以在保证安全的情况下有效地提高容错性，少数派就是允许出现故障的数量。
+- 提案编号：指一个单调递增的整数，它标识着一轮协商，提案协商之前需要生成一个全局唯一的提案编号。
+- 提案：由提案编号和提案指令组成的实体。
+
+### 角色分类
+
+- 提议者（Proposer）：是算法的发起者，它驱动协商的进程，相当于会议的主持人。
+- 接受者（Accepter）：是提案的决策者，相当于会议的参会人员。
+- 学习者（Learning）：不参与提案的发送和决策，只是被动的接受提案选定的结果，相当于普通民众。
+
+### 算法流程
+
+Basic Paxos 算法可分为三个阶段：
+
+- 准备阶段，协商过程的开始：
+  - 提议者生成一个提案编号，并向所有接受者发送包含提案编号的**准备请求**。当接受者收到提案后，会根据约定的规则决定是否需要响应**准备请求**：
+    - 如果提案编号大于该接受者已经通过的提案中的最大提案编号，则通过**准备请求**，并承诺在当前准备请求的响应中，加上已经批准的**接受请求**的最大编号的提案指令。如果接受者没有批准过任何**接受请求**，返回空。
+    - 如果提案编号小于等于该接受者已经通过的提案中的最大提案编号，则拒绝本次**准备请求**，不响应请求。
+  - 如果接受者通过了**准备请求**，则对提议者做出以下承诺：
+    - 不再通过编号小于等于本次提案的提案编号的**准备请求**。
+    - 不再批准编号小于该提案编号的**接受请求**。
+    - 如果接受者已经批准过编号小于该提案编号的**接受请求**，则承诺在本次**准备请求**的响应中加入已经批准过的**接受请求**的最大编号的提案指令。如果接受者没有批准过任何**接受请求**，返回空。
+- 接受阶段：
+  - 提议者收到多数派的响应后，向接受者发送接受请求，此时的接受请求包含提案编号和提案指令。接受者收到接受请求后，做出以下反馈：
+    - 如果接受者没有通过编号比**接受请求**的编号还大的**准备请求**，则批准该**接受请求**，并返回已通过的最大编号。
+    - 如果接受者已通过编号更大的**准备请求**，则拒绝本次**接受请求**，并返回已通过的最大编号。
+  - 如果多数派的接受者批准了该**接受请求**，说明提案已达成共识。反之，需要回到准备阶段重新开始协商。
+- 学习阶段，不属于协商阶段，主要作用是将已达成共识的提案交给学习者进行处理，然后执行状态转移操作。如何让学习者知道提案是否已达成共识，这里只介绍这一种最简单的方案，就是进行提议者同步：
+  - 协商过程中，只有提案对应的提议者才知道提案是否已达成共识和最终达成共识的真正提案，所以只要有提案达成共识，那么由提议者立即将该提案发送给学习者。
+
+### Multi Paxos，对 Basic Paxos 的优化
+
+  Basic Paxos 需要多轮才能对一个提案达成共识，所以协商效率很低。Lamport 提出了运行一轮就可以使多个值、多个指令达成共识的 Multi Paxos：
+
+- 引入领导者（Leader）角色，只能由领导者发起提案，减少了活锁的概率。
+- 在没有提案冲突的情况下，省略准备阶段，由此优化为一阶段。
+
+Multi Paxos 在执行一次准备阶段的任务，获得了多数派接受者的承诺之后，后续连续的提案只需要执行接受阶段的任务即可。因为领导者认为接受者一定会批准自己后续提出的提案。
+
+Multi Paxos 也允许多主的存在，并允许它们同时发起提案，只要每个领导者按照算法约定运行，便不会影响其算法安全性。为什么？
+
+- 在一个接受者承诺了新领导者的提案编号之后，意味着之前对其他领导者承诺的提案编号将失效，之前领导者发起的接受请求自然会被拒绝。
+
+在 Multi-Paxos 中，领导者的选举过程并非通过显式的投票机制完成，而是通过算法本身的特性隐式产生：
+
+- Multi-Paxos 并未设计独立的领导者选举流程，而是通过提案竞争和全局承诺机制自然形成。当某个提议者连续成功提交提案时，其他节点会默认接受其领导地位，暂停自身提案以避免冲突。这一过程类似于“抢占式协调”，而非传统的主节点投票。
+- 具体解释就是：若提议者的提案编号持续被多数派接受（未被更高编号打断），则该提议者实质上成为领导者，后续提案可跳过准备阶段直接提交。
+
+
+
+## Raft
+
+ 
 
