--- a/content/posts/PaperNotes/基于大型语言模型的检索增强生成综述_刘雪颖.md
+++ b/content/posts/PaperNotes/基于大型语言模型的检索增强生成综述_刘雪颖.md
@@ -109,7 +109,7 @@ cover:
 
 
 
-### 表 6 RAG 评估指标
+### 表 4 RAG 评估指标
 
 | **类别**     | **指标**               | **定义与公式**                                               | **用途**                                          |
 | ------------ | ---------------------- | ------------------------------------------------------------ | ------------------------------------------------- |
@@ -128,6 +128,12 @@ cover:
 |              | 余弦相似度（CS）       | *CS*=∥*A*∥∥*B*∥*A*⋅*B*                                       | 检索 / 生成结果的多样性评估（值越低多样性越高）。 |
 |              | 噪声鲁棒性（NR）       | 处理噪声数据时的响应质量保持能力。                           | 抗干扰能力，如模糊输入场景。                      |
 |              | 反事实鲁棒性（CFR）    | 识别并忽略错误信息的能力。                                   | 对抗错误检索内容的可靠性。                        |
+
+
+
+### 表 5 RAG 评估基准
+
+![](/img/PaperNotes/基于大型语言模型的检索增强生成综述/img3.png)
 
 
 
